--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
+mypy = "*"
 
 [packages]
 pandas = "*"
 Scrapy = "*"
+pillow = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
