--- a/criticker/scrapy.cfg
+++ b/criticker/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = criticker_movies.settings
+default = criticker.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = criticker_movies
+project = criticker
