--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -11,30 +11,28 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7, 3.8]
-
+        python-version: ['3.8', '3.9', '3.10']
+        os: [ubuntu-18.04, macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: abatilo/actions-poetry@v2
+      with:
+        poetry-version: '1.0'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip pipenv
-        pipenv install --deploy --system
-    - name: Lint with flake8
+        python -m pip install --upgrade pip poetry
+        poetry check
+        poetry install
+    - name: Static type analysis and code formatting
       run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+        poetry run black . --check
+        poetry run mypy .
+    - name: Run tests
       run: |
-        pip install pytest
-        pytest criticker_movies/tests.py
+        poetry run python criticker/tests.py
