--- a/great_expectations/great_expectations.yml
+++ b/great_expectations/great_expectations.yml
@@ -22,11 +22,11 @@ datasources:
     data_connectors:
       default_inferred_data_connector_name:
         module_name: great_expectations.datasource.data_connector
-        base_directory: ../criticker
+        base_directory: ../data
         default_regex:
           group_names:
             - data_asset_name
-          pattern: (.*csv)
+          pattern: (.*)
         name: default_inferred_data_connector_name
         class_name: InferredAssetFilesystemDataConnector
       default_runtime_data_connector_name:
