--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ google-cloud-storage = "^2.6.0"
 mypy = "^0.990"
 pandas-stubs = "^1.5.1"
 black = "^22.10.0"
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
